[package]
name = "tynkerbase-agent"
version = "0.1.0"
edition = "2021"
authors = ["Anish Kanthamneni <akneni@gmail.com>"]
repository = "https://github.com/akneni/tynkerbase-agent"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tynkerbase_universal = { git = "https://github.com/akneni/tynkerbase-universal.git", branch = "master"}
anyhow = "1.0.86"
rocket = { version = "0.5.1", features = ["tls", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
bincode = "1.3.3"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
rand = "0.8.5"
url = "2.5.2"
